<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spartans.rentec.UserProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textprofilename"
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="39dp"
                    android:layout_marginStart="20dp"
                    android:text="Hai"
                    android:textAlignment="textEnd"
                    android:textStyle="bold" />


            </LinearLayout>


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginTop="60dp"
                android:text="@string/firstname" />

            <EditText
                android:id="@+id/editTextfirstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textfirstname"
                android:layout_below="@+id/textfirstname"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/editTextfirstname"
                android:layout_marginTop="10dp"
                android:text="@string/lastname" />

            <EditText
                android:id="@+id/editTextlastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textlastname"
                android:layout_below="@+id/textlastname"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"

                android:layout_marginTop="10dp"
                android:text="@string/radio_gender" />

            <RadioGroup
                android:id="@+id/userprofile_radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/edittextlastname"
                android:text="@string/radio_gender">

                <RadioButton
                    android:id="@+id/userprofile_radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_male" />

                <RadioButton
                    android:id="@+id/userprofile_radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female" />

            </RadioGroup>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/radioSex"
                android:layout_marginTop="10dp"
                android:text="@string/phonenumber" />

            <EditText
                android:id="@+id/editTextphonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textphonenumber"
                android:layout_below="@+id/textphonenumber"
                android:ems="10"
                android:inputType="phone"
                tools:text="+94" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob" />

            <EditText
                android:id="@+id/textdob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"

                android:layout_marginTop="10dp"
                android:text="@string/nic" />

            <EditText
                android:id="@+id/editTextnic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:inputType="textPersonName" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/streetaddressnumber" />

                <EditText
                    android:id="@+id/editTextstreetaddressnumber"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/streetaddress" />

            <EditText
                android:id="@+id/editTextstreetaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextstreetaddressoptional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/optionalstreetaddress"
                android:inputType="textPersonName" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city" />

            <Spinner
                android:id="@+id/spinneruserdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginEnd="30dp"
                android:layout_marginStart="21dp"

                android:layout_marginTop="10dp" />

            <!--<TextView-->

            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/province" />-->

            <!--<EditText-->
            <!--android:id="@+id/editTextprovince"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:ems="10"-->
            <!--android:inputType="textPersonName" />-->

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail" />

            <EditText
                android:id="@+id/editTextmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />


            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:background="@color/button_theme_color"
                android:text="@string/save" />


        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
